--- a/package.json
+++ b/package.json
@@ -19,7 +19,23 @@
     "docker:dev": "docker compose -f docker-compose.dev.yml up -d",
     "docker:dev:down": "docker compose -f docker-compose.dev.yml down",
     "docker:dev:logs": "docker compose -f docker-compose.dev.yml logs -f",
-    "prisma:studio": "./scripts/dev-db.sh studio"
+    "prisma:studio": "./scripts/dev-db.sh studio",
+    "db:reset": "./scripts/reset-databases.sh",
+    "db:init": "./scripts/init-migrations.sh",
+    "db:status": "./scripts/check-status.sh",
+    "studio:auth": "./scripts/prisma-studio-auth.sh",
+    "studio:assignment": "./scripts/prisma-studio-assignment.sh",
+    "studio:all": "./scripts/prisma-studio-all.sh",
+    "studio:stop": "./scripts/stop-prisma-studio.sh",
+    "dev:start": "./scripts/dev-docker.sh",
+    "dev:restart": "pnpm docker:dev:down && pnpm dev:start",
+    "prisma:generate": "pnpm --filter auth-service prisma:generate && pnpm --filter assignment-service prisma:generate",
+    "prisma:migrate:auth": "pnpm --filter auth-service prisma:migrate",
+    "prisma:migrate:assignment": "pnpm --filter assignment-service prisma:migrate",
+    "prisma:db:push:auth": "pnpm --filter auth-service prisma:db:push",
+    "prisma:db:push:assignment": "pnpm --filter assignment-service prisma:db:push",
+    "prisma:studio:auth": "pnpm --filter auth-service prisma:studio -- --hostname 0.0.0.0 --port 5555",
+    "prisma:studio:assignment": "pnpm --filter assignment-service prisma:studio -- --hostname 0.0.0.0 --port 5556"
   },
   "keywords": [],
   "author": "",
