--- a/apps/assignment-service/package.json
+++ b/apps/assignment-service/package.json
@@ -21,7 +21,11 @@
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
     "db:migrate": "prisma migrate dev",
-    "db:studio": "prisma studio"
+    "db:studio": "prisma studio",
+    "prisma:generate": "prisma generate",
+    "prisma:migrate": "prisma migrate dev",
+    "prisma:studio": "prisma studio",
+    "prisma:db:push": "prisma db push"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
