--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -4,19 +4,32 @@
   "type": "module",
   "scripts": {
     "build": "nuxt build",
-    "dev": "nuxt dev",
+    "dev": "nuxt dev --host 0.0.0.0 --port 4200",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "lint": "eslint \"**/*.{js,ts,vue}\""
   },
   "dependencies": {
     "@nuxt/eslint": "1.7.1",
     "@nuxt/image": "1.10.0",
     "@nuxt/ui": "3.3.0",
+    "@pinia/nuxt": "^0.5.1",
+    "@tailwindcss/vite": "^4.1.11",
     "eslint": "^9.32.0",
+    "jose": "^5.2.0",
     "nuxt": "^4.0.1",
+    "pinia": "^2.1.7",
+    "tailwindcss": "^4.1.11",
     "typescript": "^5.8.3",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.32.0",
+    "@typescript-eslint/eslint-plugin": "^8.38.0",
+    "@typescript-eslint/parser": "^8.38.0",
+    "globals": "^16.3.0",
+    "vue-eslint-parser": "^10.2.0"
   }
 }
