--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,28 @@ services:
       timeout: 5s
       retries: 5
 
+  # Frontend client
+  client:
+    build:
+      context: ./apps/client
+      dockerfile: Dockerfile
+    container_name: client
+    ports:
+      - "4200:4200"
+    networks:
+      - kpi-network
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:4200/"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
+    environment:
+      - NODE_ENV=production
+      - NITRO_HOST=0.0.0.0
+      - NITRO_PORT=4200
+
   api-gateway:
     build:
       context: ./apps/api-gateway
@@ -73,7 +95,7 @@ services:
       dockerfile: Dockerfile
     container_name: assignment-service
     ports:
-      - "3002:3002"
+      - "8200:8200"
     depends_on:
       postgres:
         condition: service_healthy
@@ -81,7 +103,7 @@ services:
       - kpi-network
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:3002/health"]
+      test: ["CMD", "curl", "-f", "http://localhost:8200/health"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -89,6 +111,7 @@ services:
     environment:
       - NODE_ENV=production
       - DATABASE_URL=postgresql://postgres:password@kpi-postgres:5432/kpi_db
+      - PORT=8200
 
 networks:
   kpi-network:
