--- a/apps/api-gateway/env.example
+++ b/apps/api-gateway/env.example
@@ -1,4 +1,5 @@
 NODE_ENV=production
 PORT=3000
 AUTH_SERVICE_URL=http://auth-service:8100
-ASSIGNMENT_SERVICE_URL=http://assignment-service:3002 
+ASSIGNMENT_SERVICE_URL=http://assignment-service:3002
+CHECKER_SERVICE_URL=http://checker-service:8300 
