feat(auth): add refresh logic, enhance UX by asking to login only when needed

--- a/apps/api-gateway/.env.example
+++ b/apps/api-gateway/.env.example
@@ -1,6 +1,6 @@
 # Application (REQUIRED)
 NODE_ENV=development
-PORT=3000
-
-# Services (REQUIRED)
-AUTH_SERVICE_URL=http://localhost:8100 
+PORT=5000
+AUTH_SERVICE_URL=http://auth-service:8100
+ASSIGNMENT_SERVICE_URL=http://assignment-service:8200
+CHECKER_SERVICE_URL=http://checker-service:8300 
