--- a/apps/auth-service/.env.example
+++ b/apps/auth-service/.env.example
@@ -3,5 +3,9 @@ NODE_ENV=development
 PORT=8100
 
 # JWT (REQUIRED)
-JWT_SECRET=your-super-secret-key-change-in-production-environment
-JWT_EXPIRES_IN=1h 
+JWT_ACCESS_SECRET="your-super-secret-jwt-key-that-is-at-least-32-characters-long"
+JWT_REFRESH_SECRET="your-super-secret-jwt-key-that-is-at-least-32-characters-long"
+JWT_ACCESS_EXPIRES_IN="1m"
+JWT_REFRESH_EXPIRES_IN="7m"
+
+DATABASE_URL="postgresql://postgres:password@localhost:5432/auth_db?schema=public"
