--- a/apps/api-gateway/Dockerfile.dev
+++ b/apps/api-gateway/Dockerfile.dev
@@ -6,7 +6,7 @@ WORKDIR /app
 RUN npm install -g pnpm
 
 # Copy package files
-COPY package.json pnpm-lock.yaml ./
+COPY package.json ./
 
 # Install all dependencies (including dev dependencies)
 RUN pnpm install --no-frozen-lockfile
@@ -15,7 +15,7 @@ RUN pnpm install --no-frozen-lockfile
 COPY . .
 
 # Expose port
-EXPOSE 3000
+EXPOSE 5000
 
 # Start in development mode with hot reload
 CMD ["pnpm", "start:dev"] 
