--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -31,35 +31,13 @@ services:
       - kpi-network-dev
     restart: unless-stopped
 
-  # Frontend client
-  client:
-    build:
-      context: ./apps/client
-      dockerfile: Dockerfile.dev
-    container_name: client-dev
-    ports:
-      - "4200:4200"
-    networks:
-      - kpi-network-dev
-    restart: unless-stopped
-    volumes:
-      - ./apps/client:/app
-      - /app/node_modules
-    environment:
-      - NODE_ENV=development
-      - NITRO_HOST=0.0.0.0
-      - NITRO_PORT=4200
-      - API_BASE_URL=http://localhost:3000
-      - AUTH_SERVICE_URL=http://localhost:8100
-    command: ["pnpm", "dev"]
-
   api-gateway:
     build:
       context: ./apps/api-gateway
       dockerfile: Dockerfile.dev
     container_name: api-gateway-dev
     ports:
-      - "3000:3000"
+      - "5000:5000"
     depends_on:
       - auth-service
       - assignment-service
@@ -72,6 +50,7 @@ services:
       - /app/node_modules
     environment:
       - NODE_ENV=development
+      - PORT=5000
       - AUTH_SERVICE_URL=http://auth-service-dev:8100
       - ASSIGNMENT_SERVICE_URL=http://assignment-service-dev:8200
       - CHECKER_SERVICE_URL=http://checker-service-dev:8300
@@ -98,6 +77,10 @@ services:
       - NODE_ENV=development
       - DATABASE_URL=postgresql://postgres:postgres@postgres-auth:5432/auth_db
       - PORT=8100
+      - JWT_ACCESS_SECRET=your-access-secret-key-minimum-32-characters-long
+      - JWT_REFRESH_SECRET=your-refresh-secret-key-minimum-32-characters-long
+      - JWT_ACCESS_EXPIRES_IN=1m
+      - JWT_REFRESH_EXPIRES_IN=7m
     command: ["pnpm", "start:dev"]
 
   assignment-service:
