--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint \"**/*.{js,ts,vue}\""
   },
   "dependencies": {
+    "@monaco-editor/loader": "^1.5.0",
     "@nuxt/eslint": "1.7.1",
     "@nuxt/image": "1.10.0",
     "@nuxt/ui": "3.3.0",
@@ -18,6 +19,7 @@
     "@tailwindcss/vite": "^4.1.11",
     "eslint": "^9.32.0",
     "jose": "^5.2.0",
+    "monaco-editor": "^0.52.2",
     "nuxt": "^4.0.1",
     "pinia": "^2.1.7",
     "tailwindcss": "^4.1.11",
@@ -27,6 +29,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
+    "@iconify-json/heroicons": "^1.2.2",
+    "@iconify-json/lucide": "^1.2.60",
     "@typescript-eslint/eslint-plugin": "^8.38.0",
     "@typescript-eslint/parser": "^8.38.0",
     "globals": "^16.3.0",
