--- a/apps/checker-service/Dockerfile.dev
+++ b/apps/checker-service/Dockerfile.dev
@@ -1,7 +1,7 @@
 FROM node:22-alpine
 
-# Install required dependencies for Prisma
-RUN apk add --no-cache openssl
+# Install required dependencies for Prisma and Docker CLI
+RUN apk add --no-cache openssl docker-cli
 
 WORKDIR /app
 
@@ -15,7 +15,7 @@ RUN npm install --legacy-peer-deps
 COPY . .
 
 # Expose port
-EXPOSE 8200
+EXPOSE 8300
 
 # Start in development mode with hot reload
 CMD ["npm", "run", "start:dev"] 
