--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -119,6 +119,7 @@ services:
     volumes:
       - ./apps/checker-service:/app
       - /app/node_modules
+      - /var/run/docker.sock:/var/run/docker.sock
     environment:
       - NODE_ENV=development
       - PORT=8300
