--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev --host 0.0.0.0 --port 3000",
+    "predev": "node -e \"if (!require('fs').existsSync('.env')) { console.error('❌ .env file is missing! Please create it with required environment variables.'); process.exit(1); }\"",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
@@ -18,6 +19,7 @@
     "@pinia/nuxt": "^0.5.1",
     "@tailwindcss/vite": "^4.1.11",
     "eslint": "^9.32.0",
+    "joi": "^17.13.3",
     "jose": "^5.2.0",
     "monaco-editor": "^0.52.2",
     "nuxt": "^4.0.1",
