--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -22,8 +22,12 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 20.x
+          node-version: 22.x
           cache: 'pnpm'
+      
+      - name: Copy .env.example to .env
+        run: |
+          cp ./apps/client/.env.example ./apps/client/.env
           
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
